--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.peterfich.digi2al</groupId>
-    <artifactId>connect4</artifactId>
+    <artifactId>connect</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
@@ -12,6 +12,31 @@
 	        <artifactId>dropwizard-core</artifactId>
 	        <version>${dropwizard.version}</version>
 	    </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>2.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.4.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     
     <properties>
@@ -28,7 +53,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
-                <!-- compile for Java 1.7 -->
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -63,7 +87,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.peterfich.digi2al.connect4.Connect4Application</mainClass>
+                                    <mainClass>com.peterfich.digi2al.connect.application.ConnectApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
